--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.6.7"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
