--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "api": "^4.5.2",
     "ethers": "^5.7.1",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.32",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
