--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@rainbow-me/rainbowkit": "^0.9.0",
     "api": "^4.5.2",
-    "ethers": "^5.7.1",
+    "ethers": "^5.7.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.32",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.6.7"
+    "wagmi": "^0.11.5"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
