--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.9.1",
     "wagmi": "^0.11.5"
   },
   "devDependencies": {
