--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@rainbow-me/rainbowkit": "^0.9.0",
+    "@tailwindcss/forms": "^0.5.3",
     "api": "^4.5.2",
     "ethers": "^5.7.2",
     "keccak256": "^1.0.6",
@@ -20,7 +21,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.9.1",
+    "tailwind-merge": "^1.10.0",
     "wagmi": "^0.11.5"
   },
   "devDependencies": {
