--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-horizontal-scrolling-menu": "^4.0.1",
     "tailwind-merge": "^1.10.0",
     "wagmi": "^0.11.5"
   },
