--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.7.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.32",
+    "moralis": "^2.18.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
