--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "@headlessui/react": "^1.7.2",
     "@rainbow-me/rainbowkit": "^0.9.0",
     "@tailwindcss/forms": "^0.5.3",
-    "api": "^4.5.2",
+    "alchemy-sdk": "^2.8.0",
     "ethers": "^5.7.2",
-    "keccak256": "^1.0.6",
-    "merkletreejs": "^0.2.32",
-    "moralis": "^2.18.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
